redis_security_group.tf
# // Redis 보안 그룹 생성
# resource "aws_security_group" "redis_sg" {
#   vpc_id = aws_vpc.singsong_vpc.id
#
#   ingress {
#     from_port   = 6379
#     to_port     = 6379
#     protocol    = "tcp"
#     cidr_blocks = ["10.0.0.0/16"]
#   }
#
#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
# }
